grammar.js
      translation_unit: ($) => repeat($._top_level_item),

      // Top level items are block items with the exception of the expression statement
      _top_level_item: ($) =>
        choice(
          $.function_definition,
          alias($._old_style_function_definition, $.function_definition),
          $.linkage_specification,
          $.declaration,
          $._top_level_statement,
          $.attributed_statement,
          $.type_definition,
          $._empty_declaration,
          $.preproc_if,
          $.preproc_ifdef,
          $.preproc_include,
          $.preproc_def,
          $.preproc_function_def,
          $.preproc_call
        ),

      _block_item: ($) =>
        choice(
          $.function_definition,
          alias($._old_style_function_definition, $.function_definition),
          $.linkage_specification,
          $.declaration,
          $.statement,
          $.attributed_statement,
          $.type_definition,
          $._empty_declaration,
          $.preproc_if,
          $.preproc_ifdef,
          $.preproc_include,
          $.preproc_def,
          $.preproc_function_def,
          $.preproc_call
        ),

      // Preprocesser

      preproc_def: ($) =>
        seq(
          preprocessor('define'),
          field('name', $.identifier),
          field('value', optional($.preproc_arg)),
          token.immediate(/\r?\n/)
        ),

      preproc_call: ($) =>
        seq(
          field('directive', $.preproc_directive),
          field('argument', optional($.preproc_arg)),
          token.immediate(/\r?\n/)
        ),

      ...preprocIf('', ($) => $._block_item),
      ...preprocIf('_in_field_declaration_list', ($) => $._field_declaration_list_item),
      ...preprocIf('_in_enumerator_list', ($) => seq($.enumerator, ',')),
      ...preprocIf('_in_enumerator_list_no_comma', ($) => $.enumerator, -1),

      preproc_arg: () => token(prec(-1, /\S([^/\n]|\/[^*]|\\\r?\n)*/)),
      preproc_directive: () => /#[ \t]*[a-zA-Z0-9]\w*/,

      _preproc_expression: ($) =>
        choice(
          $.identifier,
          alias($.preproc_call_expression, $.call_expression),
          $.number_literal,
          $.char_literal,
          $.preproc_defined,
          alias($.preproc_unary_expression, $.unary_expression),
          alias($.preproc_binary_expression, $.binary_expression),
          alias($.preproc_parenthesized_expression, $.parenthesized_expression)
        ),

      function_definition: ($) =>
        seq(
          optional($.ms_call_modifier),
          $._declaration_specifiers,
          optional($.ms_call_modifier),
          field('declarator', $._declarator),
          field('body', $.compound_statement)
        ),

      declaration: ($) =>
        seq(
          $._declaration_specifiers,
          commaSep1(
            field(
              'declarator',
              choice(
                seq(optional($.ms_call_modifier), $._declaration_declarator, optional($.gnu_asm_expression)),
                $.init_declarator
              )
            )
          ),
          ';'
        ),

      type_definition: ($) =>
        seq(
          optional('__extension__'),
          'typedef',
          $._type_definition_type,
          $._type_definition_declarators,
          repeat($.attribute_specifier),
          ';'
        ),
      _type_definition_type: ($) =>
        seq(repeat($.type_qualifier), field('type', $.type_specifier), repeat($.type_qualifier)),
      _type_definition_declarators: ($) => commaSep1(field('declarator', $._type_declarator)),

      _declaration_specifiers: ($) =>
        prec.right(
          seq(repeat($._declaration_modifiers), field('type', $.type_specifier), repeat($._declaration_modifiers))
        ),

      linkage_specification: ($) =>
        seq(
          'extern',
          field('value', $.string_literal),
          field('body', choice($.function_definition, $.declaration, $.declaration_list))
        ),

      attribute_specifier: ($) => seq(choice('__attribute__', '__attribute'), '(', $.argument_list, ')'),

      attribute: ($) =>
        seq(optional(seq(field('prefix', $.identifier), '::')), field('name', $.identifier), optional($.argument_list)),

      attribute_declaration: ($) => seq('[[', commaSep1($.attribute), ']]'),

      ms_restrict_modifier: () => '__restrict',

      ms_pointer_modifier: ($) =>
        choice(
          $.ms_unaligned_ptr_modifier,
          $.ms_restrict_modifier,
          $.ms_unsigned_ptr_modifier,
          $.ms_signed_ptr_modifier,
          $.ms_pointer_size_modifier
        ),

      declaration_list: ($) => seq('{', repeat($._block_item), '}'),

      _declarator: ($) =>
        choice(
          $.attributed_declarator,
          $.pointer_declarator,
          $.function_declarator,
          $.array_declarator,
          $.parenthesized_declarator,
          $.identifier
        ),

      _declaration_declarator: ($) =>
        choice(
          $.attributed_declarator,
          $.pointer_declarator,
          alias($._function_declaration_declarator, $.function_declarator),
          $.array_declarator,
          $.parenthesized_declarator,
          $.identifier
        ),

      _abstract_declarator: ($) =>
        choice(
          $.abstract_pointer_declarator,
          $.abstract_function_declarator,
          $.abstract_array_declarator,
          $.abstract_parenthesized_declarator
        ),

      attributed_declarator: ($) => prec.right(seq($._declarator, repeat1($.attribute_declaration))),
      pointer_declarator: ($) =>
        prec.dynamic(
          1,
          prec.right(
            seq(
              optional($.ms_based_modifier),
              '*',
              repeat($.attribute_declaration),
              repeat($.ms_pointer_modifier),
              repeat($.type_qualifier),
              field('declarator', $._declarator)
            )
          )
        ),
      abstract_pointer_declarator: ($) =>
        prec.dynamic(
          1,
          prec.right(
            seq(
              '*',
              repeat($.attribute_declaration),
              repeat($.ms_pointer_modifier),
              repeat($.type_qualifier),
              field('declarator', optional($._abstract_declarator))
            )
          )
        ),

      function_declarator: ($) =>
        prec.right(
          1,
          seq(
            field('declarator', $._declarator),
            field('parameters', $.parameter_list),
            optional($.gnu_asm_expression),
            repeat(choice($.attribute_specifier, $.identifier, alias($.preproc_call_expression, $.call_expression)))
          )
        ),

      array_declarator: ($) =>
        prec(
          1,
          seq(
            field('declarator', $._declarator),
            '[',
            repeat(choice($.type_qualifier, 'static')),
            field('size', optional(choice($.expression, '*'))),
            ']'
          )
        ),
      init_declarator: ($) =>
        seq(field('declarator', $._declarator), '=', field('value', choice($.initializer_list, $.expression))),

      compound_statement: ($) => seq('{', repeat($._block_item), '}'),

      storage_class_specifier: () =>
        choice(
          'extern',
          'static',
          'auto',
          'register',
          'inline',
          '__inline',
          '__inline__',
          '__forceinline',
          'thread_local',
          '__thread'
        ),

      type_qualifier: ($) =>
        choice(
          'const',
          'constexpr',
          'volatile',
          'restrict',
          '__restrict__',
          '__extension__',
          '_Atomic',
          '_Noreturn',
          'noreturn',
          '_Nonnull',
          $.alignas_qualifier
        ),

      alignas_qualifier: ($) => seq(choice('alignas', '_Alignas'), '(', choice($.expression, $.type_descriptor), ')'),

      sized_type_specifier: ($) =>
        choice(
          seq(
            repeat(choice('signed', 'unsigned', 'long', 'short')),
            field('type', optional(choice(prec.dynamic(-1, $._type_identifier), $.primitive_type))),
            repeat1(choice('signed', 'unsigned', 'long', 'short'))
          ),
          seq(
            repeat1(choice('signed', 'unsigned', 'long', 'short')),
            repeat($.type_qualifier),
            field('type', optional(choice(prec.dynamic(-1, $._type_identifier), $.primitive_type))),
            repeat(choice('signed', 'unsigned', 'long', 'short'))
          )
        ),

      primitive_type: () =>
        token(
          choice(
            'bool',
            'char',
            'int',
            'float',
            'double',
            'void',
            'size_t',
            'ssize_t',
            'ptrdiff_t',
            'intptr_t',
            'uintptr_t',
            'charptr_t',
            'nullptr_t',
            'max_align_t',
            ...[8, 16, 32, 64].map((n) => `int${n}_t`),
            ...[8, 16, 32, 64].map((n) => `uint${n}_t`),
            ...[8, 16, 32, 64].map((n) => `char${n}_t`)
          )
        ),

      enum_specifier: ($) =>
        seq(
          'enum',
          choice(
            seq(
              field('name', $._type_identifier),
              optional(seq(':', field('underlying_type', $.primitive_type))),
              field('body', optional($.enumerator_list))
            ),
            field('body', $.enumerator_list)
          ),
          optional($.attribute_specifier)
        ),

      enumerator_list: ($) =>
        seq(
          '{',
          repeat(
            choice(
              seq($.enumerator, ','),
              alias($.preproc_if_in_enumerator_list, $.preproc_if),
              alias($.preproc_ifdef_in_enumerator_list, $.preproc_ifdef),
              seq($.preproc_call, ',')
            )
          ),
          optional(
            seq(
              choice(
                $.enumerator,
                alias($.preproc_if_in_enumerator_list_no_comma, $.preproc_if),
                alias($.preproc_ifdef_in_enumerator_list_no_comma, $.preproc_ifdef),
                $.preproc_call
              )
            )
          ),
          '}'
        ),

      struct_specifier: ($) =>
        prec.right(
          seq(
            'struct',
            optional($.attribute_specifier),
            optional($.ms_declspec_modifier),
            choice(
              seq(field('name', $._type_identifier), field('body', optional($.field_declaration_list))),
              field('body', $.field_declaration_list)
            ),
            optional($.attribute_specifier)
          )
        ),

      union_specifier: ($) =>
        prec.right(
          seq(
            'union',
            optional($.ms_declspec_modifier),
            choice(
              seq(field('name', $._type_identifier), field('body', optional($.field_declaration_list))),
              field('body', $.field_declaration_list)
            ),
            optional($.attribute_specifier)
          )
        ),

      field_declaration_list: ($) => seq('{', repeat($._field_declaration_list_item), '}'),

      _field_declaration_list_item: ($) =>
        choice(
          $.field_declaration,
          $.preproc_def,
          $.preproc_function_def,
          $.preproc_call,
          alias($.preproc_if_in_field_declaration_list, $.preproc_if),
          alias($.preproc_ifdef_in_field_declaration_list, $.preproc_ifdef)
        ),

      field_declaration: ($) =>
        seq($._declaration_specifiers, optional($._field_declaration_declarator), optional($.attribute_specifier), ';'),
      _field_declaration_declarator: ($) =>
        commaSep1(seq(field('declarator', $._field_declarator), optional($.bitfield_clause))),

      bitfield_clause: ($) => seq(':', $.expression),

      enumerator: ($) => seq(field('name', $.identifier), optional(seq('=', field('value', $.expression)))),

      variadic_parameter: () => '...',

      parameter_list: ($) =>
        seq('(', choice(commaSep(choice($.parameter_declaration, $.variadic_parameter)), $.compound_statement), ')'),
      parameter_declaration: ($) =>
        seq(
          $._declaration_specifiers,
          optional(field('declarator', choice($._declarator, $._abstract_declarator))),
          repeat($.attribute_specifier)
        ),

      // Statements

      attributed_statement: ($) => seq(repeat1($.attribute_declaration), $.statement),

      expression_statement: ($) => seq(optional(choice($.expression, $.comma_expression)), ';'),

      return_statement: ($) => seq('return', optional(choice($.expression, $.comma_expression)), ';'),

      _string: ($) => prec.left(choice($.string_literal, $.concatenated_string)),

      type_descriptor: ($) =>
        seq(
          repeat($.type_qualifier),
          field('type', $.type_specifier),
          repeat($.type_qualifier),
          field('declarator', optional($._abstract_declarator))
        ),

      sizeof_expression: ($) =>
        prec(
          PREC.SIZEOF,
          seq('sizeof', choice(field('value', $.expression), seq('(', field('type', $.type_descriptor), ')')))
        ),

      subscript_expression: ($) =>
        prec(PREC.SUBSCRIPT, seq(field('argument', $.expression), '[', field('index', $.expression), ']')),

      call_expression: ($) =>
        prec(PREC.CALL, seq(field('function', $.expression), field('arguments', $.argument_list))),

      gnu_asm_expression: ($) =>
        prec(
          PREC.CALL,
          seq(
            choice('asm', '__asm__', '__asm'),
            repeat($.gnu_asm_qualifier),
            '(',
            field('assembly_code', $._string),
            optional(
              seq(
                field('output_operands', $.gnu_asm_output_operand_list),
                optional(
                  seq(
                    field('input_operands', $.gnu_asm_input_operand_list),
                    optional(
                      seq(
                        field('clobbers', $.gnu_asm_clobber_list),
                        optional(field('goto_labels', $.gnu_asm_goto_list))
                      )
                    )
                  )
                )
              )
            ),
            ')'
          )
        ),

      gnu_asm_output_operand_list: ($) => seq(':', commaSep(field('operand', $.gnu_asm_output_operand))),

      gnu_asm_output_operand: ($) =>
        seq(
          optional(seq('[', field('symbol', $.identifier), ']')),
          field('constraint', $.string_literal),
          '(',
          field('value', $.expression),
          ')'
        ),

      gnu_asm_input_operand_list: ($) => seq(':', commaSep(field('operand', $.gnu_asm_input_operand))),

      gnu_asm_input_operand: ($) =>
        seq(
          optional(seq('[', field('symbol', $.identifier), ']')),
          field('constraint', $.string_literal),
          '(',
          field('value', $.expression),
          ')'
        ),

      gnu_asm_clobber_list: ($) => seq(':', commaSep(field('register', $._string))),

      argument_list: ($) => seq('(', commaSep(choice($.expression, $.compound_statement)), ')'),

      number_literal: () => {
        const separator = "'";
        const hex = /[0-9a-fA-F]/;
        const decimal = /[0-9]/;
        const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))));
        const decimalDigits = seq(repeat1(decimal), repeat(seq(separator, repeat1(decimal))));
        return token(
          seq(
            optional(/[-+]/),
            optional(choice(/0[xX]/, /0[bB]/)),
            choice(
              seq(
                choice(decimalDigits, seq(/0[bB]/, decimalDigits), seq(/0[xX]/, hexDigits)),
                optional(seq('.', optional(hexDigits)))
              ),
              seq('.', decimalDigits)
            ),
            optional(seq(/[eEpP]/, optional(seq(optional(/[-+]/), hexDigits)))),
            /[uUlLwWfFbBdD]*/
          )
        );
      },
